don't free content of the list returned by empathy_connection_aggregator_get_all_groups()

https://bugzilla.gnome.org/show_bug.cgi?id=667037